public/css/style.css
body {
    font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Tahoma,Ubuntu,Cantarell,Oxygen,Roboto,Helvetica,Arial,sans-serif;
    background-color: #F6F4F0;
}

/* Responsive cho mobile */
@media (max-width: 767.98px) {
  /* Menu responsive */
  .navbar-nav, .navbar-collapse, .dropdown-menu {
    width: 100% !important;
    min-width: 0 !important;
    box-sizing: border-box;
  }
  .navbar-nav li, .navbar-nav .nav-item {
    width: 100%;
    text-align: left;
  }
  .navbar-nav .nav-link, .dropdown-menu .dropdown-item {
    width: 100%;
    padding-left: 16px;
    padding-right: 16px;
    box-sizing: border-box;
  }
  /* Các bảng, block bài viết */
  .row, .container, .container-fluid {
    width: 100% !important;
    padding-left: 4px !important;
    padding-right: 4px !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
    box-sizing: border-box;
  }
  /* Sửa lỗi width cố định cho slide */
  .slide {
    width: 100% !important;
    height: auto !important;
    max-width: 100vw !important;
  }
  /* Ẩn thanh cuộn ngang nếu có */
  html, body {
    overflow-x: hidden;
  }

    body {
        font-size: 15px;
        padding: 0 2vw;
    }
    #menu ul {
        text-align: left;
        padding-left: 0;
    }
    #menu li {
        display: block;
        width: 100%;
        border-left: none;
        border-bottom: 1px solid #eee;
        margin-left: 0;
        padding: 10px 0;
        text-align: left;
    }
    #menu a {
        padding: 10px 15px;
        font-size: 16px;
    }
    .navbar {
        flex-direction: column;
        align-items: flex-start;
    }
    .navbar-nav {
        width: 100%;
    }
    .form-inline {
        width: 100%;
        margin: 10px 0;
        flex-direction: column;
        align-items: stretch;
    }
    .form-inline input[type="text"] {
        width: 100% !important;
        margin-bottom: 8px;
    }
    .form-inline button {
        width: 100%;
    }
    .chuyenmuc, .tag {
        font-size: 14px;
        padding-left: 4px;
    }
    .khoangtrang {
        margin-top: 8px;
    }
    img {
        max-width: 100%;
        height: auto;
    }
    .table {
        font-size: 13px;
        overflow-x: auto;
        display: block;
    }
    .dropdown-menu {
        width: 100vw;
        left: 0 !important;
        right: 0 !important;
    }
    /* Ẩn một số phần nếu cần */
    /* .some-desktop-only-class { display: none !important; } */
}


#menu ul {
    margin-bottom: 0px;
    padding-left: 0px;
    list-style-type: none;
    text-align: center;
}
#menu li{
    color: #f1f1f1;
    display: inline-block;
    width: auto;
    height: auto;
    line-height: 40px;
    margin-left: -5px;
    border-left: 1px solid rgba(255,255,255,.2);
    padding: 0px 10px 0px 10px;
}
#menu a {
    text-decoration: none;
    color: #fff;
    display: block;
}
#menu li:hover {
    background: #1c2a61;
    color: #fff;
}
a.click {
    padding: 4px 5px 4px 5px;
}
a.click:hover {
    background: #f8f9fa;
    border: 1px solid #ced4da;
    border-radius: 4px;
    margin: auto;
}
.khoangtrang {
    margin-top: 15px;
}
.chuyenmuc {
    border-left: 1px solid #2f46a3;
    border-left-width: 4px;
    padding-left: 7px;
    text-transform: uppercase;
    font-size: 16px;
    font-weight: 600;
}
.tag {
    border-left: 1px solid #2f46a3;
    border-left-width: 4px;
    padding-left: 7px;
}
.trong {
    padding-bottom: 10px;
}
.fade-scale {
    transform: scale(0);
    opacity: 0;
    -webkit-transition: all .30s linear;
    -o-transition: all .30s linear;
    transition: all .25s linear;
}

.fade-scale.in {
opacity: 1;
transform: scale(1);
}

.modal-footer2 {
    display: -ms-flexbox;
    /* display: flex; */
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: end;
    justify-content: flex-end;
    padding: .75rem;
    border-bottom-right-radius: calc(.3rem - 1px);
    border-bottom-left-radius: calc(.3rem - 1px);
}

.modal-header2 {
    display: -ms-flexbox;
    /* display: flex; */
    -ms-flex-align: start;
    align-items: flex-start;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding: 1rem 1rem;
    border-top-left-radius: calc(.3rem - 1px);
    border-top-right-radius: calc(.3rem - 1px);
}

.modal-content {
    border-radius: 10px;
}

.modal-dialog {
    max-width: 377px;
}

a.tee:hover {
    color: #1c2a61;
}
    

.banner{
    width: 100%;
    height: 450px;
    overflow: hidden;
    padding-left: 15px;
    box-sizing: border-box; 
 }

.slide {
    width: 1000px;
    height: 500px;
}
.search{
    background-color: #021526;
    color: #F6F4F0;
    border-color: #F6F4F0;
    border-width: 2px;
}
.search:hover{
    background-color: #F6F4F0;
    color: #021526;
}
.dropdown-toggle::after {
    display: none; /* Hides the dropdown icon */
}
.dropdown:hover .dropdown-menu {
    display: block;
}
.text {
    color: #2f46a3;
}

